add new components

--- a/src/components/Dialogs/Dialogs.module.scss
+++ b/src/components/Dialogs/Dialogs.module.scss
@@ -2,4 +2,7 @@
     display: flex;
     align-items: center;
     flex: 1;
+    background-image: url('../../assets/img/bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
