--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -1,7 +1,8 @@
 .sidebar {
     width: 100px;
     height: 100%;
-    border-right: 1px solid red;
+    background-color: #1c1c1e;
+    margin-right: 2px;
 }
 .nav {
 
