--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,9 +1,9 @@
 .header {
     width: 100%;
     height: 50px;
-    border: 1px solid black;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: antiquewhite;
+    background-color: #1c1c1e;
+    margin-bottom: 2px;
 }
