--- a/src/components/Message/Message.module.scss
+++ b/src/components/Message/Message.module.scss
@@ -1,7 +1,7 @@
 .footer {
     height: 50px;
+    border-top: 1px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #1c1c1e;
 }
