--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,5 +3,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #1c1c1e;
+    background-color: #319c2d;
+    color: ghostwhite;
 }
