--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -1,8 +1,10 @@
 .sidebar {
-    width: 100px;
+    width: 300px;
     height: 100%;
-    background-color: #1c1c1e;
+    background-color: #f2eee6;
     margin-right: 2px;
+    border-radius: 0 10px 10px 0;
+    padding: 10px;
 }
 .nav {
 
@@ -13,5 +15,7 @@
 }
 
 .sidebarItem {
-
+    a {
+        color: green;
+    }
 }
