--- a/src/components/Dialogs/Dialogs.module.scss
+++ b/src/components/Dialogs/Dialogs.module.scss
@@ -1,3 +1,11 @@
+.dialogs {
+    width: 300px;
+    height: 100%;
+    background-color: #f2eee6;
+    margin-right: 2px;
+    border-radius: 0 10px 10px 0;
+    padding: 10px;
+}
 .dialog {
     position: relative;
     height: 75px;
